...
                    Button(action: {
                        self.presenter.didTriggerAction(.updateIngredients(self.ingredients))
                        UIApplication.shared.sendAction(#selector(UIResponder.resignFirstResponder),
                                                        to: nil, from: nil, for: nil)
                    }) {
                        Image(systemName: "magnifyingglass")
                    }.padding(.trailing, 8).accessibility(identifier: "search_button")
                    TextField("filter_by_ingredients".localized, text: $ingredients, onCommit: {
                        self.presenter.didTriggerAction(.updateIngredients(self.ingredients))
                        UIApplication.shared.sendAction(#selector(UIResponder.resignFirstResponder),
                                                        to: nil, from: nil, for: nil)
                    }).textFieldStyle(RoundedBorderTextFieldStyle())
                }
...
                            self.listItemAppears(recipeViewModel)
                        }
                    }
                })
            }.navigationBarTitle("recipes".localized).navigationBarItems(trailing:
                NavigationLink(destination: FavouriteRecipesView()) {
                    Image(systemName: "heart.fill")
            })
        }
        .onAppear {
            self.presenter.didReceiveEvent(.viewAppears)
        }
        .onDisappear {
...
